[package]
name = "kubemc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
clap = { version = "4.4.11", features = ["derive"] }
dirs = "5.0.1"
futures = "0.3.29"
k8s-openapi = { version = "0.20.0", features = ["v1_25"] }
kube = { version = "0.87.1", default-features = false, features = ["client", "config", "runtime", "rustls-tls"] }
regex = "1.10.2"
serde = { version = "1.0.193", features = ["std", "derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
tabled = "0.14.0"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
