[package]
name = "kubemc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
clap = { version = "4.5.41", features = ["derive"] }
dirs = "6.0.0"
futures = "0.3.31"
k8s-openapi = { version = "0.25.0", features = ["v1_33"] }
kube = { version = "1.1.0", default-features = false, features = ["client", "config", "runtime", "rustls-tls"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["std", "derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tabled = "0.14.0"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio-rustls = { version = "0.26.2", features = ["aws_lc_rs"]}
