[package]
name = "kubemc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
futures = "0.3.32"
k8s-openapi = { version = "0.27.0", features = ["v1_33"] }
kube = { version = "3.1.0", default-features = false, features = ["client", "config", "runtime", "rustls-tls"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["std", "derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tabled = "0.14.0"
tokio = { version = "1.52.2", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tokio-rustls = { version = "0.26.4", features = ["aws_lc_rs"]}
